fixed navbar falls behind other elements

--- a/resumeStyle.css
+++ b/resumeStyle.css
@@ -75,6 +75,7 @@ li{
     position: fixed;
     width: 100%;
     top: 0px;
+    z-index: 1;
 }
 
 #bgImg::before {
